--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,16 @@
 ---
 abstract: 'Use a share directory on your dist during bootstrap'
 author:
-  - 'Kent Fredric <kentnl@cpan.org>'
+  - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
   Dist::Zilla::Plugin::Bootstrap::lib: '0.04000000'
-  Dist::Zilla::Util::Test::KENTNL: '1.003001'
   ExtUtils::MakeMaker: '0'
+  File::Copy::Recursive: '0'
   File::ShareDir: '0'
   File::Spec: '0'
   Path::Tiny: '0'
   Test::DZil: '0'
+  Test::Fatal: '0'
   Test::More: '0.89'
 configure_requires:
   ExtUtils::MakeMaker: '0'
@@ -23,10 +24,9 @@ name: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 provides:
   Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
     file: lib/Dist/Zilla/Plugin/Bootstrap/ShareDir/Dist.pm
-    version: '1.001001'
+    version: '1.000003'
 requires:
   Dist::Zilla::Role::Bootstrap: '0'
-  Dist::Zilla::Util::ConfigDumper: '0'
   Moose: '0'
   MooseX::AttributeShortcuts: '0'
   Test::File::ShareDir::Object::Dist: '0'
@@ -39,7 +39,7 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
   repository: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist.git
-version: '1.001001'
+version: '1.000003'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
@@ -91,9 +91,8 @@ x_BuiltWith:
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
     Dist::Zilla::PluginBundle::Author::KENTNL: '2.020000'
     Dist::Zilla::Role::Bootstrap: '1.000003'
-    Dist::Zilla::Util::ConfigDumper: '0.003002'
-    Dist::Zilla::Util::Test::KENTNL: '1.003001'
     ExtUtils::MakeMaker: '6.98'
+    File::Copy::Recursive: '0.38'
     File::ShareDir: '1.102'
     File::Spec: '3.49'
     Moose: '2.1211'
@@ -103,6 +102,7 @@ x_BuiltWith:
     Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
     Test::DZil: '5.020'
+    Test::Fatal: '0.013'
     Test::File::ShareDir::Object::Dist: '1.000005'
     Test::Kwalitee: '1.22'
     Test::More: '1.001003'
@@ -152,7 +152,7 @@ x_Dist_Zilla:
           try_built: '1'
           try_built_method: mtime
       name: Bootstrap::ShareDir::Dist
-      version: '1.001001'
+      version: '1.000003'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
@@ -471,7 +471,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.001001-source
+          tag: 1.000003-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -525,7 +525,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.001001'
+          tag: '1.000003'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -582,6 +582,22 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/::Role::BundleDeps'
+      version: '5.020'
+    -
+      class: Dist::Zilla::Plugin::FileFinder::ByName
+      name: corpusfiles
+      version: '5.020'
+    -
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: corpus
+      version: '5.020'
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: test
+          type: requires
+      name: TestRequires
       version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
