--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
 name = Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
-author = Kent Fredric <kentnl@cpan.org>
+author = Kent Fredric <kentfredric@gmail.com>
 license = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -203,3 +203,14 @@ Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
+
+[FileFinder::ByName / corpusfiles]
+dir = corpus
+match = \.pm$
+
+[AutoPrereqs / corpus]
+test_filder = corpusfiles
+
+[Prereqs / TestRequires]
+File::ShareDir = 0
+Dist::Zilla::Plugin::Bootstrap::lib = 0.04000000
