--- a/META.yml
+++ b/META.yml
@@ -278,6 +278,10 @@ x_Dist_Zilla:
               version: '4.010'
             -
               class: Pod::Weaver::Section::Generic
+              name: USAGE
+              version: '4.010'
+            -
+              class: Pod::Weaver::Section::Generic
               name: OVERVIEW
               version: '4.010'
             -
